update svg to avoid clipping

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ div.container-lg.weather-app {
 
 /*current city forecast*/
 div.current-location {
-  padding: 10px 0;
+  padding: 15px 0;
   color: rgba(255, 255, 255, 0.7);
 }
 
